objects/zqu__GuidedSellingSection__c.object
<CustomObject>
    <description>Sections of a guided selling page.</description>
    <fields>
        <fullName>zqu__FeatureFieldSet__c</fullName>
        <description>The name of the FieldSet used to display features in a Guided Selling Section (for Guided Selling Sections of type List only).</description>
        <inlineHelpText>The name of the FieldSet used to display features in a Guided Selling Section (for Guided Selling Sections of type List only).</inlineHelpText>
        <label>Feature Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__GuidedSellingStep__c</fullName>
        <description>The Guided Selling Step that contains this part.</description>
        <inlineHelpText>The Guided Selling Step that contains this part.</inlineHelpText>
        <label>Guided Selling Step</label>
        <referenceTo>zqu__GuidedSellingStep__c</referenceTo>
        <relationshipName>GuidedSellingParts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__NavigationHeaderText__c</fullName>
        <description>The header text of the product category navigation section of this Guided Selling Part (for Guided Selling Sections of type Navigation only).</description>
        <inlineHelpText>The header text of the product category navigation section of this Guided Selling Part (for Guided Selling Sections of type Navigation only).</inlineHelpText>
        <label>Navigation Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductGroupingField__c</fullName>
        <description>The field of the Product object to be used in this Guided Selling Step (for Guided Selling Sections of Type Navigation only).</description>
        <inlineHelpText>The field of the Product object to be used in this Guided Selling Step (for Guided Selling Sections of Type Navigation only).</inlineHelpText>
        <label>Product Grouping Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__RatePlanFieldSet__c</fullName>
        <description>The name of the field set displayed in the list of Product Rate Plans for this Guided Selling Section (for Guided Selling Sections of type List only).</description>
        <inlineHelpText>The name of the field set displayed in the list of Product Rate Plans for this Guided Selling Section (for Guided Selling Sections of type List only).</inlineHelpText>
        <label>Rate Plan Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Guided Selling Section</label>
    <nameField>
        <label>Guided Selling Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guided Selling Sections</pluralLabel>
    <recordTypes>
        <fullName>zqu__Filter</fullName>
        <active>true</active>
        <label>Filter</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__List</fullName>
        <active>true</active>
        <label>List</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Navigation</fullName>
        <active>true</active>
        <label>Navigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>zqu__Search</fullName>
        <active>true</active>
        <label>Search</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>